--- a/package.json
+++ b/package.json
@@ -10,21 +10,21 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
-    "@pixi/tilemap": "github:steel97/pixi-tilemap#v7_dev",
-    "pixi.js": "^7.1.2",
-    "vue": "^3.2.38"
+    "@pixi/tilemap": "github:steel97/pixi-tilemap#vite_dev",
+    "pixi.js": "^7.1.4",
+    "vue": "^3.2.47"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.4",
-    "@types/node": "^16.11.56",
-    "@vitejs/plugin-vue": "^3.0.3",
+    "@types/node": "^18.14.6",
+    "@vitejs/plugin-vue": "^4.0.0",
     "@vue/eslint-config-typescript": "^11.0.0",
     "@vue/tsconfig": "^0.1.3",
     "eslint": "^8.22.0",
     "eslint-plugin-vue": "^9.3.0",
     "npm-run-all": "^4.1.5",
-    "typescript": "~4.7.4",
-    "vite": "^3.0.9",
-    "vue-tsc": "^0.40.7"
+    "typescript": "~4.9.5",
+    "vite": "^4.1.4",
+    "vue-tsc": "^1.2.0"
   }
 }
